# RemoteManagement

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
RemoteManagement/Server/: CMakeLists.txt
RemoteManagement/Server/Resources/: index.html
RemoteManagement/Server/Source/: Main.cpp  Resources.cpp  Resources.h  Webserver.cpp  Webserver.h
